--- a/work.html
+++ b/work.html
@@ -48,34 +48,88 @@
                 </h2>
 
                 <div class="work__container container grid">
+
                     <article class="work__card">
-                        <a href="#" target="_blank" class="work__link">
+                        <a href="https://dinewise.vercel.app/" target="_blank" class="work__link">
+                            <img src="assets/img/dinewise.png" alt="image" class="work__img">
+                            <i class="ri-arrow-right-circle-line work__icon"></i>
+                        </a>
+
+                        <h2 class="work__title">DineWise</h2>
+                        <span class="work__subtitle">Sistema de gerenciamento de restaurantes empresariais (Azure Devops, WebApp, Api's, Next.js, Clean Architecture, Testes Unitários, Banco de Dados em nuvem)</span>
+                    </article>
+
+
+                    <article class="work__card">
+                        <a href="https://youtu.be/zSznhqeozMI?si=jXrEQNlwwPLEWwtB" target="_blank" class="work__link">
                             <img src="assets/img/nautilus.png" alt="image" class="work__img">
                             <i class="ri-arrow-right-circle-line work__icon"></i>
                         </a>
             
                         <h2 class="work__title">Nautilus Guard</h2>
-                        <span class="work__subtitle">Dispositivo IoT, Mobile</span>
+                        <span class="work__subtitle">Alarme anti-afogamento para piscinas (Arduino, IoT, Mobile, .NET MAUI, C#)</span>
                     </article>
 
                     <article class="work__card">
-                        <a href="#" target="_blank" class="work__link">
+                        <a href="https://youtu.be/ERDUKc1QUTQ?si=NDr2gzVGkmTfOrN5" target="_blank" class="work__link">
                             <img src="assets/img/booksmart.png" alt="image" class="work__img">
                             <i class="ri-arrow-right-circle-line work__icon"></i>
                         </a>
 
                         <h2 class="work__title">Booksmart</h2>
-                        <span class="work__subtitle">Dispositivo IoT, Web, Banco de Dados</span>
+                        <span class="work__subtitle">Livraria autônoma (IoT, RFID, MQTT, C#, Web, SQL, MVC Architecture)</span>
+                    </article>
+
+
+                    <article class="work__card">
+                        <a href="https://youtu.be/tgJ0IERYOiU?si=DK4QuGJCIPRhzPC4" target="_blank" class="work__link">
+                            <img src="assets/img/pantanal.png" alt="image" class="work__img">
+                            <i class="ri-arrow-right-circle-line work__icon"></i>
+                        </a>
+
+                        <h2 class="work__title">Alerta Pantanal</h2>
+                        <span class="work__subtitle">Monitoramento de incêndios (IoT, Análise de Dados)</span>
+                    </article>
+
+                    
+                    <article class="work__card">
+                        <a href="https://youtu.be/Ft4-IGl1bRc?si=zmU_yRGvdr9mrruq" target="_blank" class="work__link">
+                            <img src="assets/img/soundalert.png" alt="image" class="work__img">
+                            <i class="ri-arrow-right-circle-line work__icon"></i>
+                        </a>
+
+                        <h2 class="work__title">SoundAlert</h2>
+                        <span class="work__subtitle">Babá eletrônica para pets (Dispositivo Iot, Mobile, .NET MAUI)</span>
                     </article>
 
                     <article class="work__card">
-                        <a href="#" target="_blank" class="work__link">
+                        <a href="https://youtu.be/-QFOJS7eC7c?si=JnLmXj8v56dY6K3G" target="_blank" class="work__link">
+                            <img src="assets/img/pdpd.png" alt="image" class="work__img">
+                            <i class="ri-arrow-right-circle-line work__icon"></i>
+                        </a>
+
+                        <h2 class="work__title">Iniciação Científica - UFABC</h2>
+                        <span class="work__subtitle">Correlação das Massas de Buracos Negros Supermassivos e Galáxias Hospedeiras (python)</span>
+                    </article>
+
+                    <article class="work__card">
+                        <a href="https://github.com/Analuz2110/Projeto-Vai-Vem" target="_blank" class="work__link">
                             <img src="assets/img/vaivem.png" alt="image" class="work__img">
                             <i class="ri-arrow-right-circle-line work__icon"></i>
                         </a>
 
                         <h2 class="work__title">Vai&Vem</h2>
-                        <span class="work__subtitle">JavaFX, Banco de Dados, Engenharia de Software</span>
+                        <span class="work__subtitle">Controle pessoal de despesas (JavaFX, SQL, Engenharia de Software)</span>
+                    </article>
+
+                    <article class="work__card">
+                        <a href="https://www.canva.com/design/DAGG6qRJnmY/Vqnt-vPe7uPe6V_UbQJ5yQ/edit?utm_content=DAGG6qRJnmY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="work__link">
+                            <img src="assets/img/sinais.png" alt="image" class="work__img">
+                            <i class="ri-arrow-right-circle-line work__icon"></i>
+                        </a>
+
+                        <h2 class="work__title">Simulador de Sinais</h2>
+                        <span class="work__subtitle">Simulador web para canais de comunicação (Metodologias ágeis, kanban, Java, JavaScript)</span>
                     </article>
                 </div>
             </section>
