--- a/Index.html
+++ b/Index.html
@@ -115,7 +115,7 @@
                             <span style="color: #777;">Outubro 2022 - Abril 2024</span>
                           </li>
                           <li>
-                            <strong>Toledo do Brasil</strong> - <em>Analizta de Software Júnior</em>
+                            <strong>Toledo do Brasil</strong> - <em>Analista de Software Júnior</em>
                             <br />
                             <span style="color: #777;">Abril 2024 - Presente</span>
                           </li>
