Update Index.html "portfólio"

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
                             <a href="about.html" class="nav__link">Sobre Mim</a>
                         </li>
                         <li class="nav__item">
-                            <a href="work.html" class="nav__link">Portifolio</a>
+                            <a href="work.html" class="nav__link">Portfólio</a>
                         </li>
                         <li class="nav__item">
                             <a href="contact.html" class="button">Contato</a>
@@ -303,7 +303,7 @@
                             <a href="about.html" class="footer__link">Sobre Mim</a>
                         </li>
                         <li>
-                            <a href="work.html" class="footer__link">Portifolio</a>
+                            <a href="work.html" class="footer__link">Portfólio</a>
                         </li>
                         <li>
                             <a href="contact.html" class="footer__link">Entre em Contato</a>
@@ -336,3 +336,4 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
